# CSPG

./: README.md
ANNS/: CMakeLists.txt  README.md  anns_bindings.cpp  test_anns.ipynb  test_anns.py
ANNS/include/graph/: binhnsw.hpp  disjoint_set.hpp  diskann.hpp  hcnng.hpp  hnsw.hpp  nsg.hpp  nsw.hpp  rpg.hpp
ANNS/include/utils/: binary_io.hpp  get_recall.hpp  resize.hpp  stimer.hpp  tqdm.hpp
ANNS/src/: vector_ops.cpp
ANNS/src/graph/: diskann.cpp  hcnng.cpp  hnsw.cpp  nsg.cpp  nsw.cpp
ANNS/src/utils/: stimer.cpp
PuiANN/: CMakeLists.txt  README.md  puiann_bindings.cpp
PuiANN/include/: vector_ops.hpp
PuiANN/include/graph/: disjoint_set.hpp  diskann.hpp  hcnng.hpp  hnsw.hpp  nsg.hpp  nsw.hpp  rpg.hpp
PuiANN/include/utils/: stimer.hpp
PuiANN/modules/: binary_io.py
PuiANN/src/graph/: diskann.cpp  hcnng.cpp  hnsw.cpp  nsg.cpp  nsw.cpp
experiment/: CMakeLists.txt  experiment.py
experiment/distribution/: CMakeLists.txt  a.py  a.txt  clustering_analysis.ipynb  gcd_annoy.ipynb  gcd_hcnng.cpp  gcd_hnsw.cpp  gcd_ivf.ipynb  gcd_nsg.cpp  gcd_vamana.cpp  generate_clustered_data.ipynb  generate_uniform_data.ipynb  get_gt.cpp  gud_annoy.ipynb  gud_get_gt.cpp  gud_hcnng.cpp  gud_hnsw.cpp  gud_ivf.ipynb  gud_nsg.cpp  gud_vamana.cpp  rcd_annoy.ipynb  rcd_hcnng.cpp  rcd_hnsw.cpp  rcd_ivf.ipynb  rcd_nsg.cpp  rcd_vamana.cpp
experiment/figures/: distribution.ipynb  grid.ipynb  hard.ipynb  overall.ipynb  partition.ipynb  redundancy.ipynb  scale.ipynb  stages.ipynb  waste.ipynb
experiment/grid/: CMakeLists.txt  deep1m_hcnng.cpp  deep1m_hcnng_cmp.cpp  deep1m_hnsw.cpp  deep1m_hnsw_cmp.cpp  deep1m_nsg.cpp  deep1m_nsg_cmp.cpp  deep1m_vamana.cpp  deep1m_vamana_cmp.cpp  gist1m_hcnng.cpp  gist1m_hcnng_cmp.cpp  gist1m_hnsw.cpp  gist1m_hnsw_cmp.cpp  gist1m_nsg.cpp  gist1m_nsg_cmp.cpp  gist1m_vamana.cpp  gist1m_vamana_cmp.cpp  sift1m_hcnng.cpp  sift1m_hcnng_cmp.cpp  sift1m_hnsw.cpp  sift1m_hnsw_cmp.cpp  sift1m_nsg.cpp  sift1m_nsg_cmp.cpp  sift1m_vamana.cpp  sift1m_vamana_cmp.cpp
experiment/hard/: CMakeLists.txt  audio5w_hcnng_cspg.cpp  audio5w_hnsw_cspg.cpp  audio5w_nsg_cspg.cpp  audio5w_vamana_cspg.cpp  get_audio5w_gt.cpp  get_text2image1m_gt.cpp  get_turing1m_gt.cpp  hdf5_2_vecs_kosarak.py  sift100m_hcnng.cpp  sift100m_hnsw.cpp  sift100m_nsg.cpp  sift100m_vamana.cpp  text2image1m_hcnng.cpp  text2image1m_hnsw.cpp  text2image1m_nsg.cpp  text2image1m_vamana.cpp  turing1m_hcnng.cpp  turing1m_hnsw.cpp  turing1m_nsg.cpp  turing1m_vamana.cpp
experiment/output/distribution/: deep1m_annoy.csv  deep1m_ivf.csv  gcd_annoy.csv  gcd_hcnng_baseline.csv  gcd_ivf.csv  gcd_vamana_cspg_2.csv  gist1m_annoy.csv  gist1m_ivf.csv  gud_annoy.csv  gud_hcnng_baseline.csv  gud_hcnng_cspg_2.csv  gud_hnsw_baseline.csv  gud_hnsw_cspg_2.csv  gud_ivf.csv  gud_nsg_baseline.csv  gud_nsg_cspg_2.csv  gud_vamana_baseline.csv  gud_vamana_cspg_2.csv  rcd_hcnng_cspg_2.csv  rcd_hnsw_baseline.csv  rcd_hnsw_cspg_2.csv  rcd_nsg_baseline.csv  rcd_nsg_cspg_2.csv  rcd_vamana_baseline.csv  sift1m_annoy.csv  sift1m_ivf.csv  text2image1m_annoy.csv  text2image1m_ivf.csv  turing1m_annoy.csv  turing1m_ivf.csv
experiment/output/grid/: deep1m_hcnng.csv  deep1m_hcnng_cmp_baseline.csv  deep1m_hcnng_cmp_cspg_2.csv  deep1m_hnsw.csv  deep1m_hnsw_cmp_baseline.csv  deep1m_hnsw_cmp_cspg_2.csv  deep1m_nsg.csv  deep1m_nsg_cmp_baseline.csv  deep1m_nsg_cmp_cspg_2.csv  deep1m_vamana.csv  deep1m_vamana_cmp_baseline.csv  deep1m_vamana_cmp_cspg_2.csv  gist1m_hcnng.csv  gist1m_hcnng_cmp_baseline.csv  gist1m_hcnng_cmp_cspg_2.csv  gist1m_hnsw.csv  gist1m_hnsw_cmp_baseline.csv  gist1m_hnsw_cmp_cspg_2.csv  gist1m_nsg.csv  gist1m_nsg_cmp_baseline.csv  gist1m_nsg_cmp_cspg_2.csv  gist1m_vamana.csv  gist1m_vamana_cmp_baseline.csv  gist1m_vamana_cmp_cspg_2.csv  optimal_parameters.ipynb  sift1m_hcnng.csv  sift1m_hcnng_cmp_baseline.csv  sift1m_hcnng_cmp_cspg_2.csv  sift1m_hnsw.csv  sift1m_hnsw_cmp_baseline.csv  sift1m_hnsw_cmp_cspg_2.csv  sift1m_nsg.csv  sift1m_nsg_cmp_baseline.csv  sift1m_nsg_cmp_cspg_2.csv  sift1m_vamana.csv  sift1m_vamana_cmp_baseline.csv  sift1m_vamana_cmp_cspg_2.csv
experiment/output/hard/: audio5w_analysis.ipynb  (+26 more)
experiment/overall/: CMakeLists.txt  deep1m_hcnng.cpp  deep1m_hnsw.cpp  deep1m_nsg.cpp  deep1m_vamana.cpp  gist1m_hcnng.cpp  gist1m_hnsw.cpp  gist1m_nsg.cpp  gist1m_vamana.cpp  sift10m_hcnng.cpp  sift10m_hnsw.cpp  sift10m_nsg.cpp  sift10m_vamana.cpp  sift1m_hcnng.cpp  sift1m_hnsw.cpp  sift1m_nsg.cpp  sift1m_vamana.cpp
experiment/partition/: CMakeLists.txt  deep1m_hcnng.cpp  deep1m_hnsw.cpp  deep1m_nsg.cpp  deep1m_vamana.cpp  gist1m_hcnng.cpp  gist1m_hnsw.cpp  gist1m_nsg.cpp  gist1m_vamana.cpp  sift1m_hcnng.cpp  sift1m_hnsw.cpp  sift1m_nsg.cpp  sift1m_vamana.cpp
experiment/redundancy/: CMakeLists.txt  deep1m_hcnng.cpp  deep1m_hnsw.cpp  deep1m_nsg.cpp  deep1m_vamana.cpp  gist1m_hcnng.cpp  gist1m_hnsw.cpp  gist1m_nsg.cpp  gist1m_vamana.cpp  sift1m_bin.cpp  sift1m_hcnng.cpp  sift1m_hnsw.cpp  sift1m_nsg.cpp  sift1m_vamana.cpp
experiment/scale/: CMakeLists.txt  sample_dataset_construction.cpp  sift0.1m_hcnng.cpp  sift0.1m_hnsw.cpp  sift0.1m_nsg.cpp  sift0.1m_vamana.cpp  sift0.2m_hcnng.cpp  sift0.2m_hnsw.cpp  sift0.2m_nsg.cpp  sift0.2m_vamana.cpp  sift0.5m_hcnng.cpp  sift0.5m_hnsw.cpp  sift0.5m_nsg.cpp  sift0.5m_vamana.cpp  sift2m_hcnng.cpp  sift2m_hnsw.cpp  sift2m_nsg.cpp  sift2m_vamana.cpp  sift5m_hcnng.cpp  sift5m_hnsw.cpp  sift5m_nsg.cpp  sift5m_vamana.cpp
experiment/stages/: CMakeLists.txt  deep1m_hcnng.cpp  deep1m_hnsw.cpp  deep1m_nsg.cpp  deep1m_vamana.cpp  gist1m_hcnng.cpp  gist1m_hnsw.cpp  gist1m_nsg.cpp  gist1m_vamana.cpp  sift1m_hcnng.cpp  sift1m_hnsw.cpp  sift1m_nsg.cpp  sift1m_vamana.cpp
experiment/waste/: CMakeLists.txt  get_waste.hpp  sift0.1m_hcnng.cpp  sift0.1m_hnsw.cpp  sift0.1m_nsg.cpp  sift0.1m_vamana.cpp  sift0.2m_hcnng.cpp  sift0.2m_hnsw.cpp  sift0.2m_nsg.cpp  sift0.2m_vamana.cpp  sift0.5m_hcnng.cpp  sift0.5m_hnsw.cpp  sift0.5m_nsg.cpp  sift0.5m_vamana.cpp  sift2m_hcnng.cpp  sift2m_hnsw.cpp  sift2m_nsg.cpp  sift2m_vamana.cpp  sift5m_hcnng.cpp  sift5m_hnsw.cpp  sift5m_nsg.cpp  sift5m_vamana.cpp
(+128 files in other folders)
